--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@types/react-redux": "^7.1.16",
     "babel-plugin-module-resolver": "^4.1.0",
+    "dva-core-ts": "^2.0.7",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.2.0"
+    "react-native-screens": "^3.2.0",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
