--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-redux": "^7.1.16",
     "babel-plugin-module-resolver": "^4.1.0",
     "dva-core-ts": "^2.0.7",
+    "dva-loading-ts": "^3.0.23",
+    "echarts": "^5.1.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
@@ -24,6 +26,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
+    "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.4"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react-native-iconfont-cli": "^2.2.1",
     "react-test-renderer": "17.0.1",
     "typescript": "^3.8.3"
   },
