--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@types/react-redux": "^7.1.16",
+    "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "dva-core-ts": "^2.0.7",
     "dva-loading-ts": "^3.0.23",
