--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-animated-gradient-transition": "^0.1.6",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.1.9",
     "react-native-reanimated": "^2.1.0",
