--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@types/lodash": "^4.14.170",
     "@types/react-redux": "^7.1.16",
     "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "dva-core-ts": "^2.0.7",
     "dva-loading-ts": "^3.0.23",
     "echarts": "^5.1.1",
+    "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
@@ -32,6 +35,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-storage": "^1.0.1",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.0.1",
     "react-redux": "^7.2.4"
