--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.0.1",
+    "react-navigation-header-buttons": "^7.0.1",
     "react-redux": "^7.2.4"
   },
   "devDependencies": {
