--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
+    "react-native-drag-sort": "^2.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-animated-gradient-transition": "^0.1.6",
     "react-native-linear-gradient": "^2.5.6",
