--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "dva-core-ts": "^2.0.7",
     "dva-loading-ts": "^3.0.23",
+    "dva-model-extend": "^0.1.2",
     "echarts": "^5.1.1",
     "lodash": "^4.17.21",
     "react": "17.0.1",
