--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@types/lodash": "^4.14.170",
     "@types/react-redux": "^7.1.16",
     "axios": "^0.21.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "dva-core-ts": "^2.0.7",
     "dva-loading-ts": "^3.0.23",
-    "dva-model-extend": "^0.1.2",
+    "echarts": "^5.1.1",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
+    "react-native-drag-sort": "^2.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-animated-gradient-transition": "^0.1.6",
     "react-native-linear-gradient": "^2.5.6",
@@ -51,7 +53,6 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
-    "babel-plugin-module-resolver": "^4.1.0",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-native-iconfont-cli": "^2.2.1",
     "react-test-renderer": "17.0.1",
