--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
@@ -41,6 +42,7 @@
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.0.1",
+    "react-native-tab-view-viewpager-adapter": "^1.1.0",
     "react-navigation-header-buttons": "^7.0.1",
     "react-redux": "^7.2.4"
   },
