--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-sound": "^0.11.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.0.1",
