--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
+    "react-native-slider-x": "^0.11.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-sound": "^0.11.0",
     "react-native-storage": "^1.0.1",
