--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dva-loading-ts": "^3.0.23",
     "dva-model-extend": "^0.1.2",
     "echarts": "^5.1.1",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-native": "0.64.0",
