--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-video-custom-controls": "^0.1.0",
     "react-navigation-header-buttons": "^7.0.1",
     "react-redux": "^7.2.4",
-    "realm": "^10.4.2"
+    "realm": "^10.4.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -62,6 +63,7 @@
     "@types/react-native-snap-carousel": "^3.8.3",
     "@types/react-native-video": "^5.0.6",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/yup": "^0.29.11",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
