--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.1.9",
     "react-native-reanimated": "^2.1.0",
+    "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-slider-x": "^0.11.3",
