--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "build": "set ENVFILE=.env && npx upload-pgy --no-ios --apk=v7a",
+    "appstore": "set ENVFILE=.env && npx upload-appstore"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
@@ -71,6 +73,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-native-iconfont-cli": "^2.2.1",
+    "react-native-upload": "^2.2.1",
     "react-test-renderer": "17.0.1",
     "typescript": "^3.8.3"
   },
@@ -87,5 +90,10 @@
       "json",
       "node"
     ]
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
